[package]
name = "lichess_external_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.5", features = ["json", "native-certs"] }
serde = { version = "1.0.147", features = ["derive"] }
iter-read = "0.3.1"
rand = "0.8.5"
